# backend/app.js
@@ -1,24 +1,71 @@
 const express = require('express');
 const bodyParser = require('body-parser');
+const dotenv = require('dotenv').config();
 const mongodb = require('./db/connect');
-const app = express();
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const port = process.env.PORT || 8080;
+const app = express();
 
-app.use(bodyParser.json());
-app.use((req, res, next) => {
-  res.setHeader('Access-Control-Allow-Origin', '*');
-  res.setHeader(
-    'Access-Control-Allow-Headers',
-    'Origin, X-Requested-With, Content-Type, Accept, Z-key'
-  );
-  res.setHeader(
-    'Access-Control-Allow-Methods',
-    'GET, POST, PUT, DELETE, OPTIONS'
-  );
-  next();
+app
+  .use(bodyParser.json())
+  .use(session({
+    secret: "secret",
+    resave: false,
+    saveUninitialized: true,
+  }))
+  .use(passport.initialize())
+  .use(passport.session())
+  .use((req, res, next) => {
+    res.setHeader('Access-Control-Allow-Origin', '*');
+    res.setHeader(
+      'Access-Control-Allow-Headers',
+      'Origin, X-Requested-With, Content-Type, Accept, Z-key, Authorization'
+    );
+    res.setHeader(
+      'Access-Control-Allow-Methods',
+      "POST, GET, PUT, PATCH, OPTIONS, DELETE"
+    );
+    next();
+  })
+  .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
+  .use(cors({ origin: '*' }))
+  .use('/', require('./routes/index.js'))
+
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.callbackURL
+},
+function (accessToken, refreshToken, profile, done) {
+  // User.findOrCreate({ githubId: profile.id }, function (err, user) {
+    return done(null, profile);
+  // });
+}
+));
+
+passport.serializeUser((user, done) => {
+  done(null, user);
 });
-app.use('/', require('./routes'));
+passport.deserializeUser((user, done) => {
+  // User.findById(id, function (err, user) {
+    done(null, user);
+  // });
+});
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged Out') });
+
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs', session: false}),
+  (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+  }
+);
+  
 
 mongodb.initDb((err) => {
   if (err) {
