# backend/controllers/brands.js
@@ -2,7 +2,7 @@ const mongodb = require('../db/connect.js');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAllBrands = async (req, res) => {
-  //#swagger.tags=['Course-Instances'];
+  //#swagger.tags=['Brands'];
   try {
     const db = mongodb.getDb();
     const brands = await db
@@ -11,9 +11,11 @@ const getAllBrands = async (req, res) => {
       .toArray();
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(brands);
-  }
-  catch (err) {
-    res.status(500).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -23,12 +25,14 @@ const getSingleBrand = async (req, res) => {
     const db = mongodb.getDb();
     const brand = await db
       .collection('brands')
-      .findOne({ _id: ObjectId(req.params.id) });
+      .findOne({ _id: new ObjectId(req.params.id) });
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(brand);
-  }
-  catch (err) {
-    res.status(500).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -36,14 +40,29 @@ const createBrand = async (req, res) => {
   //#swagger.tags=['Brands'];
   try {
     const db = mongodb.getDb();
-    const brand = await db
-      .collection('brands')
-      .insertOne(req.body);
+
+    // Destructure and validate required fields
+    const { name } = req.body;
+    if (!name) {
+      return res.status(400).json({ message: 'All fields are required' });
+    }
+
+    // Check if brand already exists
+    const brandExists = await db.collection('brands').findOne({ name });
+    if (brandExists) {
+      return res.status(400).json({ message: 'Brand already exists' });
+    }
+
+    const brand = { name };
+
+    const response = await db.collection('brands').insertOne(brand);
     res.setHeader('Content-Type', 'application/json');
-    res.status(201).json(brand);
-  }
-  catch (err) {
-    res.status(400).json(err);
+    res.status(201).json(response);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -51,17 +70,31 @@ const updateBrand = async (req, res) => {
   //#swagger.tags=['Brands'];
   try {
     const db = mongodb.getDb();
-    const brand = await db
+    
+    // Destructure and validate required fields
+    const { name } = req.body;
+    if (!name) {
+      return res.status(400).json({ message: 'All fields are required' });
+    }
+
+    // Check if brand already exists
+    const brandExists = await db.collection('brands').findOne({ name });
+    if (brandExists) {
+      return res.status(400).json({ message: 'Brand already exists' });
+    }
+
+    const brand = { name };
+
+    const response = await db
       .collection('brands')
-      .updateOne(
-        { _id: ObjectId(req.params.id) },
-        { $set: req.body }
-      );
+      .updateOne({ _id: new ObjectId(req.params.id) }, { $set: brand });
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(brand);
-  }
-  catch (err) {
-    res.status(400).json(err);
+    res.status(200).json(response);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -69,14 +102,22 @@ const deleteBrand = async (req, res) => {
   //#swagger.tags=['Brands'];
   try {
     const db = mongodb.getDb();
-    const brand = await db
-      .collection('brands')
-      .deleteOne({ _id: ObjectId(req.params.id) });
+    const brandId = new ObjectId(req.params.id);
+
+    // Check if any shoes are using this brand
+    const shoeUsingBrand = await db.collection('shoes').findOne({ brand: brandId });
+    if (shoeUsingBrand) {
+      return res.status(400).json({ message: 'Cannot delete brand, it is being used in shoes' });
+    }
+
+    const brand = await db.collection('brands').deleteOne({ _id: brandId });
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(brand);
-  }
-  catch (err) {
-    res.status(400).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
