# backend/controllers/categories.js
@@ -2,7 +2,7 @@ const mongodb = require('../db/connect.js');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAllCategories = async (req, res) => {
-  //#swagger.tags=['Course-Instances'];
+  //#swagger.tags=['Categories'];
   try {
     const db = mongodb.getDb();
     const categories = await db
@@ -11,9 +11,11 @@ const getAllCategories = async (req, res) => {
       .toArray();
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(categories);
-  }
-  catch (err) {
-    res.status(500).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -23,12 +25,14 @@ const getSingleCategory = async (req, res) => {
     const db = mongodb.getDb();
     const category = await db
       .collection('categories')
-      .findOne({ _id: ObjectId(req.params.id) });
+      .findOne({ _id: new ObjectId(req.params.id) });
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(category);
-  }
-  catch (err) {
-    res.status(500).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -36,14 +40,29 @@ const createCategory = async (req, res) => {
   //#swagger.tags=['Categories'];
   try {
     const db = mongodb.getDb();
-    const category = await db
-      .collection('categories')
-      .insertOne(req.body);
+
+    // Destructure and validate required fields
+    const { name } = req.body;
+    if (!name) {
+      return res.status(400).json({ message: 'All fields are required' });
+    }
+
+    // Check if category already exists
+    const categoryExists = await db.collection('categories').findOne({ name });
+    if (categoryExists) {
+      return res.status(400).json({ message: 'Category already exists' });
+    }
+
+    const category = { name };
+
+    const response = await db.collection('categories').insertOne(category);
     res.setHeader('Content-Type', 'application/json');
-    res.status(201).json(category);
-  }
-  catch (err) {
-    res.status(400).json(err);
+    res.status(201).json(response);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -51,17 +70,34 @@ const updateCategory = async (req, res) => {
   //#swagger.tags=['Categories'];
   try {
     const db = mongodb.getDb();
-    const category = await db
+    
+    // Destructure and validate required fields
+    const { name } = req.body;
+    if (!name) {
+      return res.status(400).json({ message: 'All fields are required' });
+    }
+
+    // Check if category already exists
+    const categoryExists = await db.collection('categories').findOne({ name });
+    if (categoryExists) {
+      return res.status(400).json({ message: 'Category already exists' });
+    }
+
+    const category = { name };
+    
+    const response = await db
       .collection('categories')
       .updateOne(
-        { _id: ObjectId(req.params.id) },
-        { $set: req.body }
+        { _id: new ObjectId(req.params.id) },
+        { $set: category },
       );
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(category);
-  }
-  catch (err) {
-    res.status(400).json(err);
+    res.status(200).json(response);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
 
@@ -69,16 +105,25 @@ const deleteCategory = async (req, res) => {
   //#swagger.tags=['Categories'];
   try {
     const db = mongodb.getDb();
-    const category = await db
-      .collection('categories')
-      .deleteOne({ _id: ObjectId(req.params.id) });
+    const categoryId = new ObjectId(req.params.id);
+
+    // Check if any shoes are using this category
+    const shoeUsingCategory = await db.collection('shoes').findOne({ category: categoryId });
+    if (shoeUsingCategory) {
+      return res.status(400).json({ message: 'Cannot delete category, it is being used in shoes' });
+    }
+
+    const category = await db.collection('categories').deleteOne({ _id: categoryId });
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(category);
-  }
-  catch (err) {
-    res.status(400).json(err);
+  } catch (err) {
+    res.status(400).json({ 
+      message: 'Error occurred', 
+      error: err.message,
+    });
   }
 }
+
 
 module.exports = {
   getAllCategories,
