# backend/routes/index.js
@@ -1,19 +1,19 @@
 const router = require('express').Router();
-
-router.get(
-  // #swagger.tags=['Home'];
-  '/',
-  (req, res) => {
-    res.send('Hello from the index.js routes file!');
-  }
-);
+const passport = require('passport');
 
 router.use('/api-docs', require('./swagger.js'));
-
 router.use('/brands', require('./brands.js'));
-
 router.use('/categories', require('./categories.js'));
-
 router.use('/shoes', require('./shoes.js'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function (req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    res.redirect('/');
+  }
+)}
+);
 
 module.exports = router;
